--- a/hvrskyworthvr/src/main/res/drawable/shape_media_item_bg.xml
+++ b/hvrskyworthvr/src/main/res/drawable/shape_media_item_bg.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:angle="90"
-        android:endColor="@color/color_black_a40"
-        android:startColor="@android:color/transparent"
-        android:type="linear"
-        android:useLevel="true" />
-    <corners
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
+    <solid android:color="@color/color_black_a20" />
+    <corners android:radius="8dp" />
 </shape>
