--- a/hvrskyworthvr/src/main/res/layout/activity_show.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_show.xml
@@ -27,14 +27,14 @@
     <com.yarolegovich.discretescrollview.DiscreteScrollView
         android:id="@+id/rv_main_hot_cover"
         android:layout_width="0dp"
-        android:layout_height="270dp"
-        android:layout_gravity="bottom"
+        android:layout_height="310dp"
         android:overScrollMode="never"
         app:dsv_orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.455" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="92dp"
@@ -50,13 +50,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="120dp"
         android:ellipsize="end"
         android:includeFontPadding="false"
-        android:lineSpacingExtra="5dp"
+        android:lineSpacingExtra="10dp"
         android:maxLines="2"
         android:textColor="@color/color_white_a80"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_main_hot_cover"
