--- a/hvrskyworthvr/src/main/res/layout/popup_media_vr_link.xml
+++ b/hvrskyworthvr/src/main/res/layout/popup_media_vr_link.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="317dp"
-    android:layout_height="53dp">
+    android:layout_width="308dp"
+    android:layout_height="72dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="10dp"
+        android:layout_height="53dp"
         android:background="@drawable/sky_worth_vr_mode_linking_bg_rtr"
         android:gravity="center"
         android:paddingStart="-8dp"
