--- a/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
@@ -23,17 +23,17 @@
         android:layout_width="76dp"
         android:layout_height="40dp"
         android:background="@drawable/shape_media_video_intro_small_bg"
-        android:drawablePadding="-2dp"
+        android:drawablePadding="2dp"
         android:gravity="center"
-        android:paddingStart="6dp"
-        android:paddingTop="6dp"
-        android:paddingEnd="6dp"
-        android:paddingBottom="6dp"
+        android:includeFontPadding="false"
+        android:paddingStart="11dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="8dp"
         android:text="@string/media_video_intro"
         android:textColor="@color/color_white"
-        android:textSize="19sp"
+        android:textSize="16sp"
         android:visibility="visible"
-        app:drawableStartCompat="@drawable/icon_video_intro_small"
         app:layout_constraintBottom_toBottomOf="@+id/exo_text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/exo_text_title" />
