1.播放页面调整了部分UI。2.完成蓝牙断开恢复UI和逻辑

--- a/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
@@ -160,7 +160,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="30dp"
         android:background="@null"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_exo_play"
@@ -175,7 +175,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="30dp"
         android:background="@null"
         android:padding="5dp"
         android:src="@drawable/rtr_icon_exo_pause"
@@ -188,7 +188,8 @@
         android:id="@id/exo_position"
         android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="31dp"
+        android:layout_marginBottom="45dp"
+        android:layout_marginStart="20dp"
         android:gravity="center_vertical|start"
         android:includeFontPadding="false"
         android:textColor="@color/color_white"
@@ -200,7 +201,7 @@
 
     <View
         android:id="@+id/view_pos_holder"
-        android:layout_width="86dp"
+        android:layout_width="66dp"
         android:layout_height="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -209,7 +210,8 @@
         android:id="@id/exo_duration"
         android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="31dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="45dp"
         android:gravity="center|end"
         android:includeFontPadding="false"
         android:textColor="@color/color_white"
