--- a/hvrskyworthvr/src/main/res/layout/activity_splash.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_splash.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="180dp"
         android:layout_marginBottom="28dp"
         android:scaleType="fitCenter"
+        android:visibility="gone"
         android:src="@drawable/sky_worth_splash_rtr"
         app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
         app:layout_constraintEnd_toEndOf="parent"
