1.修改加载视频进度中的颜色为白色 2.在同步播放页面的时候，戴上VR现在取消回退箭头

--- a/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
+++ b/hvrskyworthvr/src/main/res/layout/rtr_exo_control_view_landscape_normal.xml
@@ -48,6 +48,7 @@
         android:maxLines="1"
         android:textColor="@color/color_white"
         android:textSize="22sp"
+        app:layout_goneMarginStart="20dp"
         app:layout_constraintEnd_toStartOf="@+id/tv_media_video_intro_small"
         app:layout_constraintStart_toEndOf="@+id/exo_back"
         app:layout_constraintTop_toTopOf="parent"
@@ -257,7 +258,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:constraint_referenced_ids="rg_media_video,view_pos_holder" />
+        app:constraint_referenced_ids="rg_media_video,view_pos_holder,exo_back" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_connect"
