新增Mdm对USB传输的控制

--- a/huaweimdm/src/main/res/layout/mdm_activity_main.xml
+++ b/huaweimdm/src/main/res/layout/mdm_activity_main.xml
@@ -37,6 +37,55 @@
                     android:textSize="15sp" />
 
                 <TextView
+                    android:id="@+id/dataUSBStateTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/disableUSBData"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/disable_usb_data"
+                    android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/enableUSBData"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/enable_usb_data"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/current_state_screen_capture"
+                    android:textSize="15sp" />
+
+                <TextView
                     android:id="@+id/statusBarExpandPaneStateTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
