--- a/hvrskyworthvr/src/main/res/layout/activity_show.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_show.xml
@@ -58,16 +58,14 @@
 
     <net.lucode.hackware.magicindicator.MagicIndicator
         android:id="@+id/magic_Indicator_main_tag"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="22dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_divider_line"
-        app:layout_constraintEnd_toStartOf="@+id/iv_mine_about"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view_divider_line"
-        app:layout_constraintTop_toTopOf="@+id/view_divider_line"
-        app:layout_constraintWidth_max="wrap" />
+        app:layout_constraintTop_toTopOf="@+id/view_divider_line" />
 
     <com.chinafocus.hvrskyworthvr.util.widget.TagTextView
         android:id="@+id/tv_media_des"
@@ -89,9 +87,9 @@
 
     <View
         android:id="@+id/iv_mine_about"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
