1.调整了MDM功能。2.现在在2分钟以内pad续播，不会出现黑屏

--- a/huaweimdm/src/main/res/layout/mdm_activity_main.xml
+++ b/huaweimdm/src/main/res/layout/mdm_activity_main.xml
@@ -679,7 +679,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/all_done"
+            android:text="@string/all_done_reboot"
             android:textSize="15sp" />
 
     </LinearLayout>
