完成更新apkUI界面

--- a/hvrskyworthvr/src/main/res/layout/activity_mine.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_mine.xml
@@ -122,6 +122,27 @@
         app:layout_constraintStart_toEndOf="@+id/tv_about_privacy_protocol" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_about_check_version_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textColor="@color/color_white"
+        android:textSize="13sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_about_us_protocol"
+        app:layout_constraintStart_toEndOf="@+id/tv_about_us_protocol"
+        tools:text="检查新版本（V1.0.3）" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_check_version_icon_tag"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/rtr_icon_check_version"
+        app:layout_constraintEnd_toEndOf="@+id/tv_about_check_version_code"
+        app:layout_constraintTop_toTopOf="@+id/tv_about_check_version_code" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
