--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -54,4 +54,8 @@
 
     <color name="color_video_buffered">#B3FFFFFF</color>
     <color name="color_video_unplayed">#59FFFFFF</color>
+
+    <color name="color_check_version_code_bg">#FFFF4949</color>
+    <color name="color_check_version_code_confirm_bg">#FF14C27B</color>
+    <color name="color_check_version_code_download_bg">#FF1D1E24</color>
 </resources>
