--- a/hvrskyworthvr/src/main/res/values/colors.xml
+++ b/hvrskyworthvr/src/main/res/values/colors.xml
@@ -58,4 +58,5 @@
     <color name="color_check_version_code_bg">#FFFF4949</color>
     <color name="color_check_version_code_confirm_bg">#FF14C27B</color>
     <color name="color_check_version_code_download_bg">#FF1D1E24</color>
+    <color name="color_check_version_code_pause_bg">#FFF65A56</color>
 </resources>
