完成缓存模块UI

--- a/hvrskyworthvr/src/main/res/layout/activity_mine.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_mine.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
         android:layout_marginEnd="105dp"
+        android:padding="10dp"
         android:textColor="@color/color_white"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +59,7 @@
         android:id="@+id/tv_mine_about_uuid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:padding="10dp"
         android:textColor="@color/color_white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/tv_mine_about_account"
@@ -138,8 +139,8 @@
         android:layout_height="5dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:visibility="gone"
         android:src="@drawable/rtr_icon_check_version"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/tv_about_check_version_code"
         app:layout_constraintTop_toTopOf="@+id/tv_about_check_version_code" />
 
@@ -155,6 +156,53 @@
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_mine_about_uuid" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/video_update_button"
+        android:textColor="@color/color_white"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView11"
+        app:layout_constraintStart_toStartOf="@+id/tv_mine_about_uuid"
+        app:layout_constraintTop_toBottomOf="@+id/tv_mine_about_uuid" />
+
+    <Switch
+        android:id="@+id/view_switch_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:showText="false"
+        android:thumb="@drawable/thumb_selector"
+        android:track="@drawable/track_selector_bg"
+        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
+        app:layout_constraintStart_toEndOf="@+id/appCompatTextView10"
+        app:layout_constraintTop_toTopOf="@+id/appCompatTextView10"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/view_chip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:includeFontPadding="false"
+        android:text="更新列表"
+        android:textColor="@color/color_white"
+        android:textSize="10sp"
+        app:chipBackgroundColor="#065FED"
+        app:chipCornerRadius="40dp"
+        app:chipEndPadding="10dp"
+        app:chipIcon="@drawable/ic_baseline_cached_24"
+        app:chipIconSize="13dp"
+        app:chipIconVisible="true"
+        app:chipStartPadding="10dp"
+        app:iconEndPadding="-5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
+        app:layout_constraintStart_toEndOf="@+id/view_switch_button"
+        app:layout_constraintTop_toTopOf="@+id/appCompatTextView10"
+        tools:ignore="SmallSp" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_setting_mdm"
