--- a/hvrskyworthvr/src/main/res/layout/activity_mine.xml
+++ b/hvrskyworthvr/src/main/res/layout/activity_mine.xml
@@ -165,7 +165,7 @@
         android:text="@string/video_update_button"
         android:textColor="@color/color_white"
         android:textSize="13sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/appCompatTextView11"
         app:layout_constraintStart_toStartOf="@+id/tv_mine_about_uuid"
         app:layout_constraintTop_toBottomOf="@+id/tv_mine_about_uuid" />
@@ -178,7 +178,7 @@
         android:showText="false"
         android:thumb="@drawable/thumb_selector"
         android:track="@drawable/track_selector_bg"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView10"
         app:layout_constraintStart_toEndOf="@+id/appCompatTextView10"
         app:layout_constraintTop_toTopOf="@+id/appCompatTextView10"
@@ -193,7 +193,7 @@
         android:text="@string/video_update_init_text"
         android:textColor="@color/color_white"
         android:textSize="10sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:chipBackgroundColor="@color/color_video_update_ok_bg"
         app:chipCornerRadius="40dp"
         app:chipEndPadding="10dp"
